# pi-mono-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: agent.rs  context.rs  error.rs  executor.rs  lib.rs  state.rs  tool.rs  tool_registry.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: client.rs  config.rs  error.rs  lib.rs  message.rs  models.rs  provider.rs  stream.rs  tests.rs  tool.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: cli.rs  commands.rs  config.rs  main.rs  tools.rs  ui.rs
crates/pi-mom/: Cargo.toml
crates/pi-mom/src/: config.rs  lib.rs  main.rs  slack.rs
crates/pi-pods/: Cargo.toml
crates/pi-pods/src/: cli.rs  config.rs  lib.rs  main.rs  pod.rs  vllm.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: app.rs  event.rs  lib.rs  renderer.rs  terminal.rs  widgets.rs
crates/pi-tui/src/widgets/: chat_widget.rs  input_widget.rs  status_widget.rs  text_widget.rs
crates/pi-web-ui/: Cargo.toml
crates/pi-web-ui/src/: handlers.rs  lib.rs  server.rs  websocket.rs
