[package]
name = "pi-ai"
version = "0.1.0"
edition = "2021"
description = "Unified LLM API client for pi-mono-rust"
homepage = "https://github.com/lannerk/pi-mono-rust"
repository = "https://github.com/lannerk/pi-mono-rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
