[package]
name = "pi-coding-agent"
version = "0.1.0"
edition = "2021"
description = "Coding agent for pi-mono-rust"
homepage = "https://github.com/lannerk/pi-mono-rust"
repository = "https://github.com/lannerk/pi-mono-rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
glob = "0.3"
pi-ai = { path = "../pi-ai" }
pi-agent-core = { path = "../pi-agent-core" }
pi-tui = { path = "../pi-tui" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.3"
