[package]
name = "pi-pods"
version = "0.1.0"
edition = "2021"
description = "Tool and integration pods for pi-mono-rust"
homepage = "https://github.com/lannerk/pi-mono-rust"
repository = "https://github.com/lannerk/pi-mono-rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
pi-agent-core = { path = "../pi-agent-core" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
