[package]
name = "pi-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI library for pi-mono-rust"
homepage = "https://github.com/lannerk/pi-mono-rust"
repository = "https://github.com/lannerk/pi-mono-rust"
license = "MIT"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
tokio = { version = "1.0", features = ["full"] }
